--- a/support/docker/production/Dockerfile.nginx
+++ b/support/docker/production/Dockerfile.nginx
@@ -3,6 +3,6 @@ FROM nginx:alpine
 COPY ./support/docker/production/entrypoint.nginx.sh .
 RUN chmod +x entrypoint.nginx.sh
 
-EXPOSE 80 443
+EXPOSE 80 
 ENTRYPOINT []
 CMD ["/bin/sh", "entrypoint.nginx.sh"]
